--- a/templates/personalizacion.html
+++ b/templates/personalizacion.html
@@ -132,8 +132,7 @@
                                                 </td>
                                                 <td>
                                                     <img
-                                                        src="{{ url_for('static',
-                                                        filename='img/imagenes/' + categoria.personalizacion.fotos)
+                                                        src="{{categoria.personalizacion.fotos
                                                         }}" alt="Foto actual"
                                                         width="50" alt download>
                                                 </td>
