--- a/templates/shop.html
+++ b/templates/shop.html
@@ -132,9 +132,6 @@
 	</div>
 </section>
 {% endif %}
-
-
-
 <section class="pt-5" id="destination">
 
 	<div class="container">
@@ -148,30 +145,31 @@
 
 			{% for producto in Precios %}
 			<div class=" col-md-4 mb-4">
-				<form action="/agregar" method="post" class="card overflow-hidden shadow">
-					<input type="text" value="{{ producto.producto.id }}" name="producto_id_{{ producto.producto.id }}"
-						hidden>
-					<input type="text" name="cantidad_{{ producto.producto.id }}" value="1" hidden>
+				<form action="/agregar" method="post">
+					<div class="card overflow-hidden shadow">
+						<input type="text" value="{{ producto.producto.id }}"
+							name="producto_id_{{ producto.producto.id }}" hidden>
+						<input type="text" name="cantidad_{{ producto.producto.id }}" value="1" hidden>
 
-					<img class="card-img-top" src="{{producto.producto.logo}}" alt="{{producto.producto.nombre}}"
-						class="img-fluid" />
-					<div class="card-body py-4 px-3">
-						<div class="d-flex flex-column flex-lg-row justify-content-between mb-3">
-							<h4 class="text-secondary fw-medium"><a class="link-900 text-decoration-none stretched-link"
-									href="#!">{{producto.producto.nombre}}</a>
-							</h4>
+						<img class="card-img-top" src="{{producto.producto.logo}}" alt="{{producto.producto.nombre}}"
+							class="img-fluid" />
+						<div class="card-body py-4 px-3">
+							<div class="d-flex flex-column flex-lg-row justify-content-between mb-3">
+								<h4 class="text-secondary fw-medium"><a
+										class="link-900 text-decoration-none stretched-link"
+										href="#!">{{producto.producto.nombre}}</a>
+								</h4>
 
+							</div>
+							<div class="d-flex align-items-center"> <img src="static/assets/img/dest/dest2.jpg"
+									style="margin-right: 14px" width="20" alt="navigation" /><span
+									class="fs-0 fw-medium">{{producto.producto.subcategoria.nombre}}</span>
+							</div>
 						</div>
-						<div class="d-flex align-items-center"> <img src="static/assets/img/dest/dest2.jpg"
-								style="margin-right: 14px" width="20" alt="navigation" /><span
-								class="fs-0 fw-medium">{{producto.producto.subcategoria.nombre}}</span>
-						</div>
+
 					</div>
-					<button class="btn btn-success" type="submit" data-id="{{ producto.producto.id }}">Explorar</button>
-
-
-
-
+					<button class="btn btn-success" type="submit" data-id="{{ producto.producto.id }}">Agregar al
+						carrito</button>
 				</form>
 			</div>
 			{% endfor %}
