--- a/templates/servicios.html
+++ b/templates/servicios.html
@@ -61,7 +61,7 @@
                                     <td>{{categoria.descripcion}}</td>
                                     <td>
                                         <img
-                                            src="/static/img/imagenes/{{categoria.foto}}"
+                                            src="{{categoria.foto}}"
                                             alt width="50"></th>
                                     </td>
                                     <td>
