--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Luxx Art</title>
     <link rel="stylesheet" href="static/css/login.css">
     <link rel="icon" type="image/png" href="/static/img/2.png">
