--- a/templates/recuperar_contraseña.html
+++ b/templates/recuperar_contraseña.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="/static/img/2.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Luxx Art || Recuperar contraseña</title>
     <link rel="stylesheet" href="static/css/login.css">
     <link rel="stylesheet"
