--- a/templates/verficar_contraseña.html
+++ b/templates/verficar_contraseña.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Luxx Art || Recuperar contraseña</title>
     <link rel="stylesheet" href="/static/css/login.css">
     <link rel="stylesheet"
