--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                         <a href="/admin" class="nav-link">Inicio</a>
                     </li>
                     <li class="nav-item d-none d-sm-inline-block">
-                        <a href="/logout" class="nav-link">Cerra session</a>
+                        <a href="/logout/{{session['id_conexion']}}" class="nav-link">Cerra session</a>
                     </li>
 
                 </ul>
