--- a/templates/index_base.html
+++ b/templates/index_base.html
@@ -110,7 +110,7 @@
                                 <li><a class="dropdown-item" href="/perfil/{{session['cliente_id']}}">Perfil</a></li>
                                 <li><a class="dropdown-item" href="#!">Pedidos</a></li>
                                 <li><a href="" class="dropdown-item">Asistente</a></li>
-                                <li><a href="/logout" class="dropdown-item">Logout</a></li>
+                                <li><a href="/logout/{{session['id_conexion']}}" class="dropdown-item">Logout</a></li>
                             </ul>
                         </li>
                         {% else %}
