--- a/templates/card.html
+++ b/templates/card.html
@@ -1,249 +1,167 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/png" href="/static/img/2.png">
-        <title>Luxx Art</title>
-        <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.6/flowbite.min.css"
-            rel="stylesheet" />
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.6/flowbite.min.js"></script>
+{% extends "index_base.html" %}
+{% block title %} || Carrito{% endblock %}
 
-        <link
-            href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
-            rel="stylesheet">
+{% block main %}
 
-        <link rel="stylesheet"
-            href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+<section style="padding-top: 7rem;">
+    <div class="bg-holder">
+    </div>
+    <div class="container ">
+        <div class="row">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
-            rel="stylesheet">
-        <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-        <!----css3---->
-        <link rel="stylesheet" href="/static/css/custom.css">
-        <link rel="stylesheet" type="text/css" href="/static/css/style2.css">
-    </head>
-    <body>
-        <style>
-            *{
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-	font-family: 'Poppins', sans-serif;
-	text-decoration: none;
-	list-style: none;
-}
-:root{
-	--bg-color: #ffffff;
-	--text-color: #0f172a;
-	--main-color: #6b7280;
-	--other-color: #334155;
-	--big-font: 4.3rem;
-	--h2-font: 2.2rem;
-	--p-font: 1rem;
-}
-body{
-	color: var(--text-color);
-	background: var(--bg-color);
-}
-            header{
-            position: fixed;
-            right: 0;
-            top: 0;
-            width: 100%;
-            z-index: 1000;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            background: transparent;
-            padding: 17px 11%;
-            border-bottom: 1px solid #f7f9fb;
-            transition: all .45s ease;
-        }
-        .logo img{
-            width: 15%;
-            height: 15%;
-        }
-        .navbar{
-            display: flex;
-        }
-        .navbar a{
-            font-size: var(--p-font);
-            color: var(--other-color);
-            font-weight: 400;
-            padding: 10px 25px;
-            margin: 0 5px;
-            background: transparent;
-            border-radius: 30px;
-            transition: all .45s ease;
-        }
-        .navbar a:hover{
-            background: #f7f9fb;
-        }
-        .navbar a.active{
-            background: #f7f9fb;
-        }
-        header.sticky{
-	background: var(--bg-color);
-	padding: 14px 11%;
-}
-        </style>
-        <header style="background-color: white;">
-            <ul class="navbar1">
-                <li><a href="/shop" class="active">Seguir comprando</a></li>
-            </ul>
-            <div class="icons">
-                <div class="icons">
-                    {% if 'cliente_foto' in session %}
-                    <a href class="foto"><img
-                            src="{{session['cliente_foto']}}"
-                            class="foto" alt></a>
-                    {% else %}
-                    <a href="/login"><i class="ri-user-line"></i></a>
-                    {% endif %}
+            <article class="col-md-6">
+                <div class="card shadow-sm border">
+                    <div class="p-4">
+                        <h5 class="card-title mb-3">Checkout</h5>
 
-                    <a href="/card"><i class="ri-shopping-cart-line"></i></a>
-                    <div class="bx bx-menu" id="menu-icon"></div>
-                </div>
-            </div>
-        </header>
-        <div class="container mx-auto mt-8">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                <div>
-                    <h1 class="mb-4">Orden de pedido</h1>
-                    <h5 class="mb-2">Hola,</h5>
-                    <p class="text-lg text-gray-700" id="cliente">{{ session["cliente_nombre"] }}</p>
-                </div>
-                <div class="text-right">
-                    <h5>Fecha: <span id="fecha"></span></h5>
-                </div>
-            </div>
-        
-            <script>
-                var fechaActual = new Date();
-                var dia = fechaActual.getDate();
-                var mes = fechaActual.getMonth() + 1; // Los meses en JavaScript van de 0 a 11
-                var anio = fechaActual.getFullYear();
-                var fechaActualString = dia + "/" + mes + "/" + anio;
-                document.getElementById("fecha").textContent = fechaActualString;
-            </script>
-        
-            <form action="/guardar_venta" method="POST" id="formulario-venta">
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
-                    <div>
-                        <h5>Correo electrónico:</h5>
-                        <input class="w-full border border-gray-300 px-4 py-2 rounded-md focus:outline-none focus:ring-blue-500 focus:border-blue-500" name="correo" id="correo" value="{{ session["cliente_correo"] }}" disabled>
+
+                        <h5 class="card-title mb-3">Shipping info</h5>
+
+                        <div class="row mb-3">
+                            <div class="col-md-6 mb-3">
+                                <!-- Default checked radio -->
+                                <div class="form-check h-100 border rounded-3">
+                                    <div class="p-3">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                            id="flexRadioDefault1" checked />
+                                        <label class="form-check-label" for="flexRadioDefault1">
+                                            Por correo<br />
+                                            <small class="text-muted">2-10 dias por correo</small>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <!-- Default radio -->
+                                <div class="form-check h-100 border rounded-3">
+                                    <div class="p-3">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                            id="flexRadioDefault2" />
+                                        <label class="form-check-label" for="flexRadioDefault2">
+                                            UCA <br />
+                                            <small class="text-muted">5-7 dias para la entrega </small>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <!-- Default radio -->
+                                <div class="form-check h-100 border rounded-3">
+                                    <div class="p-3">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                            id="flexRadioDefault2" />
+                                        <label class="form-check-label" for="flexRadioDefault2">
+                                            UNI RUSB <br />
+                                            <small class="text-muted">5-7 dias para la entrega </small>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <!-- Default radio -->
+                                <div class="form-check h-100 border rounded-3">
+                                    <div class="p-3">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                            id="flexRadioDefault2" />
+                                        <label class="form-check-label" for="flexRadioDefault2">
+                                            MASAYA <br />
+                                            <small class="text-muted">5-7 dias para la entrega </small>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-12 mb-3">
+                                <!-- Default radio -->
+                                <div class="form-check h-100 border rounded-3">
+                                    <div class="p-3">
+                                        <input class="form-check-input" type="radio" name="flexRadioDefault"
+                                            id="flexRadioDefault2" />
+                                        <label class="form-check-label" for="flexRadioDefault2">
+                                            Metrocentro <br />
+                                            <small class="text-muted">5-7 dias para la entrega </small>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-12 mb-3 ">
+                                <p class="mb-0">Direccion</p>
+                                <div class="form-outline">
+                                    <textarea name="direccion" id="direccion" cols="30" rows="5"
+                                        class="form-control"></textarea>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+
+
+                        <div class="float-end">
+                            <button class="btn btn-light border">Cancel</button>
+                            <button class="btn btn-success shadow-0 border">Continue</button>
+                        </div>
                     </div>
-                    <div>
-                        <h5>Tipo de entrega:</h5>
-                        <select name="tipo-entrega" id="tipo-entrega" class="w-full border border-gray-300 px-4 py-2 rounded-md focus:outline-none focus:ring-blue-500 focus:border-blue-500">
-                            <option value="metro">Metro</option>
-                            <option value="grandana">Grandana</option>
-                            <option value="masaya">Masaya</option>
-                            <option value="uca">UCA</option>
-                            <option value="uni">UNI</option>
-                            <option value="envio">Envío por correo</option>
-                        </select>
-                    </div>
-                    <input type="text" name="estado" value="1" hidden>
                 </div>
-                
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
-                    <div>
-                        <h5>Teléfono:</h5>
-                        <input class="w-full border border-gray-300 px-4 py-2 rounded-md focus:outline-none focus:ring-blue-500 focus:border-blue-500" name="telefono" value="{{ session["cliente_celular"] }}" disabled>
-                    </div>
-                    <!-- Resto de los campos del formulario -->
-                    {% if carrito %}
-                    <div class="flex items-end justify-end">
-                        <button class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600" type="submit">Terminar pedido</button>
-                    </div>
-                    {% endif %}
-                </div>
-                
-            </form>
-        
-            <table class="table-auto w-full mt-4">
-                <thead>
-                    <tr>
-                        <th class="px-4 py-2">Producto</th>
-                        <th class="px-4 py-2">Foto</th>
-                        <th class="px-4 py-2">Cantidad</th>
-                        <th class="px-4 py-2">Precio</th>
-                        <th class="px-4 py-2">Sub total</th>
-                        <th class="px-4 py-2">Acción</th>
-                    </tr>
-                </thead>
-                <tbody>
+                <!-- Checkout -->
+
+
+            </article>
+
+            <div class="col-xl-6 col-lg-4">
+                <div class="ms-lg-4 mt-4 mt-lg-0" style="max-width: 320px;">
+
+                    <h6 class="text-dark my-4">Productos</h6>
                     {% for item in carrito %}
-                    <tr>
-                        <td class="px-4 py-2">{{ item.nombre }}</td>
-                        <td class="px-4 py-2"><img src="{{ item.logo }}" alt width="50"></td>
-                        <td class="px-4 py-2">{{ item.cantidad }}</td>
-                        <td class="px-4 py-2">{{ item.precio }}</td>
-                        <td class="px-4 py-2"><span class="subtotal" id="subtotal{{ loop.index }}">{{ item.precio * item.cantidad }}</span></td>
-                        <td class="px-4 py-2"><a href="/eliminar/{{ item.id }}" class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600">Eliminar</a></td>
-                    </tr>
+                    <div class="d-flex align-items-center mb-4">
+                        <div class="me-3 position-relative">
+                            <span
+                                class="position-absolute top-0 start-100 translate-middle badge rounded-pill badge-secondary">
+                                {{ item.nombre }}
+                            </span>
+                            <img src="{{ item.logo }}" style="height: 96px; width: 96x;"
+                                class="img-sm rounded border" />
+                        </div>
+                        <div class="">
+                            <a class="nav-link">
+                                {{ item.nombre }}
+                            </a>
+                            <div class="price text-muted">Precio del producto: C$ {{ item.precio}}</div>
+                            <div class="price text-muted">Subtotal: C$ {{ item.precio * item.cantidad }}</div>
+                        </div>
+                        <div class="">
+                            <a href="/eliminar/{{ item.id }}" class="btn btn-danger">Eliminar</a>
+                        </div>
+                    </div>
                     {% endfor %}
-                </tbody>
-            </table>
-        
-            <div class="grid grid-cols-1 md:grid-cols-2 mt-4">
-                <div class="text-left">
-                    <h5>Total:</h5>
-                </div>
-                <div class="text-right">
-                    <h2 id="total" class="font-bold">c$ {{total_carrito}}</h2>
+
+
+
+                    <h6 class="mb-3">Sumatoria</h6>
+                    <hr />
+                    <div class="d-flex justify-content-between">
+                        <p class="mb-2">Total price:</p>
+                        <p class="mb-2 fw-bold">C${{total_carrito}}</p>
+                    </div>
+
+                    <div class="input-group mt-3 mb-4">
+                        <input type="text" class="form-control border" name="" placeholder="Promo code" />
+                        <button class="btn btn-light text-primary border">Aplicar</button>
+                    </div>
+
+                    <hr />
                 </div>
             </div>
         </div>
-        
-        <section class="contact">
-            <div class="main-contact">
-                <div class="contact-content">
-                    <h5>Navegacion</h5>
-                    <ul>
-                        <li><a href="/">Inicio</a></li>
-                        <li><a href="/acerca">Acerca de</a></li>
-                        <li><a href="/producto">Productos</a></li>
-                    </ul>
-                </div>
+    </div>
+</section>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-                <div class="contact-content">
-                    <h5>Redes sociales</h5>
-                    <ul>
-                        <li><a
-                                href="https://www.instagram.com/luxx.art.cfts/"
-                                target="_blank">Instagram</a></li>
-                        <li><a href="https://www.facebook.com/gomez.1624"
-                                target="_blank">Facebook</a></li>
-                        <li><a href="https://wa.me/telefono">Whatsapp</a></li>
-                    </ul>
-                </div>
+<script>
+  
+</script>
 
-                <div class="contact-content">
-                    <h5>Políticas y privacidad</h5>
-                    <ul>
-                        <li><a href="#">Políticas y privacidad</a></li>
-                        <li><a href="#">Términos y condiciones</a></li>
-                        <li><a href="#">Cookies</a></li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-
-        <div class="end-text">
-            <p>© 2023 All Rights Reserved by Luxx</p>
-        </div>
-
-        <script src="https://unpkg.com/scrollreveal"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    </body>
-</html>
+{% endblock %}
