--- a/templates/cliente.html
+++ b/templates/cliente.html
@@ -233,7 +233,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <form
-                    action="/actualizar_cliente/{{productos.id}}"
+                    action="/actualizar_cliente/{{cliente.id}}"
                     method="post" enctype="multipart/form-data">
                     <div class="modal-header">
                         <h4 class="modal-title">Editar colaborador</h4>
