--- a/templates/shop.html
+++ b/templates/shop.html
@@ -147,29 +147,32 @@
 
 			<article class="col-md-4 mb-4">
 
-				<form action="/agregar" method="post">
-					<div class="card overflow-hidden shadow">
-						<img class="card-img-top" src="{{producto.producto.logo}}" alt="{{producto.producto.nombre}}"
-							class="img-fluid" />
-						<div class="card-body py-4 px-3">
-							<div class="d-flex flex-column flex-lg-row justify-content-between mb-3">
-								<h4 class="text-secondary fw-medium"><a
-										class="link-900 text-decoration-none stretched-link"
-										href="#!">{{producto.producto.nombre}}</a></h4><span
-									class="fs-1 fw-medium">Explorar</span>
-							</div>
-							<div class="d-flex align-items-center">
-								<img src="static/assets/img/dest/navigation.svg" style="margin-right: 14px" width="20"
-									alt="navigation" />
+				<form action="/agregar" method="post" class="card overflow-hidden shadow">
+					<img class="card-img-top" src="{{producto.producto.logo}}" alt="{{producto.producto.nombre}}"
+						class="img-fluid" />
+					<div class="card-body py-4 px-3">
+						<div class="d-flex flex-column flex-lg-row justify-content-between mb-3">
+							<h4 class="text-secondary fw-medium"><a class="link-900 text-decoration-none stretched-link"
+									href="#!">{{producto.producto.nombre}}</a></h4><span
+								class="fs-1 fw-medium">Explorar</span>
+						</div>
+						<div class="d-flex align-items-center">
+							<img src="static/assets/img/dest/navigation.svg" style="margin-right: 14px" width="20"
+								alt="navigation" />
 
-							</div>
 						</div>
 					</div>
+
+					<!-- Botón y campos ocultos aquí -->
 					<input type="text" value="{{ producto.producto.id }}" name="producto_id_{{ producto.producto.id }}"
 						hidden>
 					<input type="text" name="cantidad_{{ producto.producto.id }}" value="1" hidden>
 					<button class="btn btn-success" type="submit" data-id="{{ producto.producto.id }}">Agregar al
 						carrito</button>
+
+
+
+
 				</form>
 			</article>
 
