--- a/templates/login.html
+++ b/templates/login.html
@@ -57,11 +57,11 @@
       <form method="post" action="/validar">
         <!-- USERNAME INPUT -->
         <label for="username">Usuario</label>
-        <input type="text" name="usuario" placeholder="Enter Username">
+        <input type="text" name="usuario" placeholder="Ingresa usuario">
         <!-- PASSWORD INPUT -->
         <label for="password">Contraseña</label>
-        <input type="password" name="contraseña" placeholder="Enter Password">
-        <input type="submit" value="Log In">
+        <input type="password" name="contraseña" placeholder="Ingresar contraseña">
+        <input type="submit" value="Iniciar">
         <a href="/recuperar_contraseña">Has olvidado tu contraseña?</a>
         <br>
         <a href="/registro">Registrar Usuario?</a>
