--- a/templates/card.html
+++ b/templates/card.html
@@ -12,18 +12,14 @@
             <article class="col-md-6">
                 <div class="card shadow-sm border">
                     <div class="p-4">
-                        <h5 class="card-title mb-3">Checkout</h5>
-
-
-                        <h5 class="card-title mb-3">Shipping info</h5>
-
+                        <h5 class="card-title mb-3">Informacion de compra</h5>
                         <div class="row mb-3">
                             <div class="col-md-6 mb-3">
                                 <!-- Default checked radio -->
                                 <div class="form-check h-100 border rounded-3">
                                     <div class="p-3">
                                         <input class="form-check-input" type="radio" name="flexRadioDefault"
-                                            id="flexRadioDefault1" checked />
+                                            id="flexRadioDefault1"  />
                                         <label class="form-check-label" for="flexRadioDefault1">
                                             Por correo<br />
                                             <small class="text-muted">2-10 dias por correo</small>
@@ -86,7 +82,7 @@
 
                         </div>
 
-                        <div class="row">
+                        <div class="row" id="mostrar"  style="display: none;">
                             <div class="col-md-12 mb-3 ">
                                 <p class="mb-0">Direccion</p>
                                 <div class="form-outline">
@@ -161,7 +157,18 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <script>
-  
+    const radioButtons = document.getElementsByName('flexRadioDefault');
+    const divMostrar = document.getElementById('mostrar');
+
+    radioButtons.forEach(radioButton => {
+        radioButton.addEventListener('change', () => {
+            if (radioButton.id === 'flexRadioDefault1' && radioButton.checked) {
+                divMostrar.style.display = 'block';
+            } else {
+                divMostrar.style.display = 'none';
+            }
+        });
+    });
 </script>
 
 {% endblock %}
