--- a/templates/shop.html
+++ b/templates/shop.html
@@ -152,16 +152,14 @@
 								<h4 class="text-secondary fw-medium"><a
 										class="link-900 text-decoration-none stretched-link"
 										href="#!">{{producto.producto.nombre}}</a></h4><span
-									class="fs-1 fw-medium">Explorar</span>
+									class="fs-1 fw-medium">C$ {{producto.precio_actual}}</span>
 							</div>
 							<div class="d-flex align-items-center">
-								<img src="static/assets/img/dest/navigation.svg" style="margin-right: 14px" width="20"
-									alt="navigation" />
-
+								
 							</div>
 						</div>
 					</div>
-					<div class="card-footer shadow-primary ">
+					<div class="card-footer shadow-primary " style="background: white;">
 						<!-- Botón y campos ocultos aquí -->
 						<input type="text" value="{{ producto.producto.id }}"
 							name="producto_id_{{ producto.producto.id }}" hidden>
